--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <figure>
-                <img src="images/about (1).jpeg" alt="" class="media" style="width: 300px;">
+                <img src="about (1).jpeg" alt="" class="media" style="width: 300px;">
             </figure>
             <div class="content">
                 Greetings! I'm Iva, a passionate computer science student with a keen interest in web development.
@@ -180,7 +180,7 @@
     </div>
     <div class="interests">
         <div class="motto">
-        <img src="images/News Cycle.png" alt=""  style="width: 300px;">
+        <img src="News Cycle.png" alt=""  style="width: 300px;">
     </div>
     <div class="quote">
         “You see, doing one thing differently is very often the same as doing everything differently.” 
