--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             </div>
             <div class="collumn">
-                <div class="head"><span class="headline hl5"><a href="https://github.com/iva-agarwal/Javascript/tree/main/weather_app"> SkyCast-Weather Forecast web application</a></span>
+                <div class="head"><span class="headline hl5"><a href="https://github.com/iva-agarwal/iva-agarwal.github.io/blob/main/weather-app/index.html"> SkyCast-Weather Forecast web application</a></span>
                     <p><span class="headline hl6">Sep 2023</span></p>
                 </div>
 
