--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                 </div>
                 <p>References and inspos: </p>
-<!--                <p><a href="https://codepen.io/silkine"><i>@Silke V</i></a></p>  -->
+       <p><i>@Silke V</i></p> 
                <a href="https://tinyppt.com/newspaper/newspaper-maker-for-students/"> Photo reference- https://tinyppt.com/newspaper/newspaper-maker-for-students/</a>
               
 
