--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="content">
         <div class="collumns">
             <div class="collumn">
-                <div class="head"><span class="headline hl3"><a href="https://github.com/iva-agarwal/Javascript/tree/main/news_app">News web app using Vanilla Javascript</a></span>
+                <div class="head"><span class="headline hl3"><a href="news-index.html">News web app using Vanilla Javascript</a></span>
                     <p><span class="headline hl4">JUL 2023</span></p>
                 </div>
 
